# TurboLynx

./: .clang-format  .dockerignore  .gitignore  404.html  CLAUDE.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  PLAN.md  PLAN2.md  README.md  TECHSPEC.md  THIRD-PARTY-NOTICES.md  index.html  mkdocs.yml  new.json  requirements-docs.txt  run-experiment-macro.sh  run-experiment.sh  run-tbgpp.sh  sitemap.xml
src/: CMakeLists.txt
src/api/: CMakeLists.txt  README.md
src/binder/: CMakeLists.txt  binder.cpp
src/catalog/: CMakeLists.txt  catalog.cpp  catalog_entry.cpp  catalog_manager.cpp  catalog_search_path.cpp  catalog_serializer.cpp  catalog_server.cpp  catalog_set.cpp  dependency_manager.cpp
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt  assert.cpp  constants.cpp  exception.cpp  exception_format_value.cpp  file_buffer.cpp  file_system.cpp  limits.cpp  local_file_system.cpp  output_util.cpp  printer.cpp  radix.cpp  serializer.cpp  string_util.cpp  tree_renderer.cpp  typedef.cpp  types.cpp
src/compiler/: CMakeLists.txt  README.md
src/converter/: CMakeLists.txt  cypher2orca_converter.cpp  cypher2orca_scalar.cpp
src/execution/: CMakeLists.txt
src/function/: CMakeLists.txt  cast_rules.cpp  function.cpp  scalar_function.cpp  table_function.cpp
src/loader/: CMakeLists.txt  bulkload_pipeline.cpp  disk_aio_init.cpp
src/main/: CMakeLists.txt  client_context.cpp  client_data.cpp  database.cpp  query_profiler.cpp
src/nl2cypher/: CMakeLists.txt  llm_client.cpp  nl2cypher_engine.cpp  profile_collector.cpp  schema_introspector.cpp
src/optimizer/: CMakeLists.txt
src/parser/: CMakeLists.txt  base_expression.cpp  column_definition.cpp  constraint.cpp  cypher_transformer.cpp  expression_util.cpp  keyword_helper.cpp  parsed_expression.cpp  parsed_expression_iterator.cpp  parser.cpp  query_error_context.cpp  query_node.cpp  result_modifier.cpp  tableref.cpp
src/planner/: CMakeLists.txt  bound_result_modifier.cpp  expression.cpp  expression_binder.cpp  expression_iterator.cpp  joinside.cpp  logical_operator.cpp  logical_operator_visitor.cpp  logical_schema.cpp  planner.cpp  planner_logical.cpp  planner_logical_scalar.cpp  planner_logical_scalar_duckdb.cpp  planner_physical.cpp  planner_physical_scalar.cpp  pragma_handler.cpp  table_filter.cpp
src/storage/: CMakeLists.txt  block.cpp  buffer_manager.cpp  graph_storage_wrapper.cpp  storage_info.cpp  storage_manager.cpp  wal.cpp
tbgpp-api/: CMakeLists.txt
tbgpp-api-server/: CMakeLists.txt  README.md
tbgpp-api-server/include/: capi_internal.hpp  cypher_prepared_statement.hpp  s62.h  s62.hpp
tbgpp-api-server/src/: helper-c.cpp  s62-c.cpp
tbgpp-api-server/test/: dbname-workspace.csv  s62-c-api-test-1.c  s62-c-api-test.c
tbgpp-api/c-api/: CMakeLists.txt
tbgpp-api/server/: CMakeLists.txt
tbgpp-client/: CMakeLists.txt  README.md
tbgpp-client/test/: TurboGraph-S62.cpp  connection_apis_test.cpp  connection_client_test.cpp  connection_server_run.cpp  connection_test.cpp  dump_s62_mda.cpp
tbgpp-common/: CMakeLists.txt  README.md
tbgpp-compiler/: CMakeLists.txt  README.md
tbgpp-compiler/gpdb/: CMakeLists.txt
tbgpp-compiler/kuzu/: CMakeLists.txt
tbgpp-compiler/test/: dump_s62_mda.cpp  kuzu_integration_test.cpp
tbgpp-execution-engine/: .gitignore  CMakeLists.txt  README.md  livegraph-test
tbgpp-execution-engine/cmake/: FindBoost.cmake  FindTBB.cmake
tbgpp-execution-engine/include/: demo_plans.hpp  typedef.hpp
tbgpp-execution-engine/livegraph/: .gitignore
tbgpp-execution-engine/src/: demo_main.cpp  demo_plans.cpp  demo_plans_old_220821.cpp  livegraph_demo_main.cpp  typedef.cpp
tbgpp-execution-engine/test/: TurboGraph.cpp  bulkload_json.cpp  bulkload_using_index.cpp  bulkload_using_map.cpp  bulkload_using_map2.cpp  demo_main.cpp
tbgpp-graph-store/: CMakeLists.txt  README.md  extract_time.sh  run-bulkload-tpch.sh  run-bulkload.sh  run-exp.sh  tpcds-insert-header.sh  tpch-generate-relationship.sh  tpch-insert-header.sh
tbgpp-graph-store/chunkcachemanager/: CMakeLists.txt  install_process.txt  set_environment.sh
tbgpp-graph-store/scripts/: generate_dataset.sh  insert-header.sh  merge-csv-files.sh  sort-dynamic-csv-files.sh  sort-static-csv-files.sh
test/: CMakeLists.txt  README.md  run_s62_benchmark.py  s62-c-api-test.c  s62.h  socket_client_test.cpp  test  test.c  test_config.cpp  unittest.cpp
test/api-build-test/: test  test.c
test/bulkload/: CMakeLists.txt  bulkload_test_main.cpp  bulkload_test_settings.hpp  datasets.json  test_dbpedia.cpp  test_ldbc.cpp  test_smoke_cli.cpp  test_staged.cpp  test_tpch.cpp
test/catalog/: CMakeLists.txt  catalog_test_helpers.hpp  test_catalog.cpp  test_catalog_entry.cpp  test_catalog_graph.cpp  test_catalog_persistence.cpp  test_schema_introspector.cpp
test/common/: CMakeLists.txt  test_capi_prepared_statement.cpp  test_cypher_ident.cpp  test_histogram.cpp  test_llm_client.cpp  test_socket_server.cpp  test_types.cpp
test/execution/: CMakeLists.txt  test_expression_executor.cpp  test_projection.cpp
test/include/: test_config.hpp  test_helper.hpp
test/nl2cypher/: ldbc_sf1_cases.jsonl
test/query/: CMakeLists.txt  query_test_main.cpp  test_ldbc_count.cpp  test_ldbc_crud.cpp  test_ldbc_filter.cpp  test_ldbc_functions.cpp  test_ldbc_ic_correctness.cpp  test_ldbc_is_correctness.cpp  test_ldbc_robustness.cpp  test_ldbc_traversal.cpp  test_oss_regression.cpp  test_q10_bench.cpp  test_q1_count.cpp  test_q2_filter.cpp  test_q3_multihop.cpp  test_q3_traversal.cpp  test_q4_is.cpp  test_q5_ic.cpp  test_q6_bidirectional.cpp  test_q6_robustness.cpp  test_q7_crud.cpp  test_q7_multipart_vertex.cpp  test_q8_functions.cpp  test_q9_tpch.cpp  test_tpch_correctness.cpp  test_tpch_stress.cpp
test/storage/: CMakeLists.txt  test_buffer_pool.cpp  test_delta_store.cpp  test_multiproc.cpp  test_statistics.cpp  test_storage.cpp
tools/: CMakeLists.txt  README.md  bulkload.cpp  client.cpp  gen_basic_queries.cpp  merge-fwd-bwd-edges.py  recommendation-system.c  socket_server_run.cpp  store.cc  sync_package_licenses.py  test.cpp  turbolynx.cpp
(+4048 files in other folders)
